corrections des balises de sécurité

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 
     <button type="submit">Générer</button>
   </form>
-
+  <p>Recommandé : générer les tags de la catégorie Sécurité avec <a href="https://observatory.mozilla.org/">ce site.</a>
+  </p>
   <pre data-message="Copier"></pre>
 </body>
 
